Displays published posts from database

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,13 +5,21 @@
 
     <h1>A heading</h1>
     <body>
-<p>Hi there!</p>
-<div></div>
-<strong>YES</strong>
 
-<h2>A sub-<br>heading</h2>
-<p>It works!</p>
-<a href="https://djangogirls.org">link</a>
-<em>AMAZING</em>
+<div>
+        <h1><a href="/">Django Girls Blog</a></h1>
+    </div>
+    
+    {{ posts }}
+    {% for post in posts %}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+
+
+
 </html>
 
